syntax = "proto3";
package junction.junction;

option go_package = "github.com/airchains-network/junction/x/junction/types";

message VrfRecord {
  
  string vrfCreatorAddr = 1; 
  string vrfVerifierAddr = 2; 
  string podNumber = 3; 
  string stationId = 4; 
  uint64 occupancy = 5;
  string creatorsVrfKey = 6; 
  bytes serializedRcFromCreator = 7; 
  bytes serializedRcFromVerifier = 8; 
  bytes proof = 9; 
  bytes vrfOutput = 10; 
  bool isVerified = 11; 
  bytes vrn = 12;
  uint64 selectedTrackIndex = 13;
}
